objects/nFUSE__DocMan_Template__mdt.object
<CustomObject>
    <fields>
        <fullName>nFUSE__Add_Date_To_Placeholder_Name__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Specifies creating new placeholder each time with date added to name for uniqueness</description>
        <label>Add Date To Placeholder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFUSE__Content_Type__c</fullName>
        <description>Document Content Type</description>
        <label>Content Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Doc_Class__c</fullName>
        <description>Document Class</description>
        <label>Placeholder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Doc_Man__c</fullName>
        <description>Document Manager Name</description>
        <label>Document Manager Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Doc_Tab__c</fullName>
        <description>Document Tab</description>
        <label>Document Tab</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Doc_Type__c</fullName>
        <description>Document Type</description>
        <label>Category Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__File_Name__c</fullName>
        <description>Document File Name</description>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DocMan Template</label>
    <pluralLabel>DocMan Templates</pluralLabel>
</CustomObject>